[package]
name = "hyper-router"
version = "0.5.0"
authors = ["Marcin Radoszewski <moriturius@gmail.com>", "Alexander Mescheryakov <freecoder.xx@gmail.com>"]
description = "Simple routing middleware for Hyper http library."
repository = "https://github.com/marad/hyper-router"
keywords = ["hyper", "router", "routing", "middleware"]
documentation = "https://docs.rs/hyper-router/latest/hyper_router/"
license = "MIT"
edition = "2018"

[[bin]]
name = "test-server"
path = "test-server/main.rs"

[lib]
name = "hyper_router"
path = "src/lib.rs"

[dependencies]
futures = "^0.1"
hyper = { version="^0.14", features = ["server", "runtime", "tcp", "http1", "http2"] }
log = "0.4.17"
regex = "^0.2"
tokio = { version="1.21.0" , features = ["full"] }

